# prova02-api-rest

./: pyproject.toml
src/routes/: num_poltrona de acordo com as especificações iniciais..py  num_poltrona de acordo com as especificações iniciais.py  reservas_routes.py  voos_id_voos_poltronas.py  voos_routes.py  voos_venda.py
