[tool.poetry]
name = "prova02-api-rest"
version = "0.1.0"
description = ""
authors = ["Vitoria Zanella <zanellavitoria564@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.23"
pydantic = "^1.10.13"
sqlmodel = "^0.0.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
